<resources>
    <string name="app_name">WifiController</string>
    <string name="join">Join Server</string>
    <string name="enter">Server Adress</string>
    <string name="connection">Connection to Game</string>
    <string name="empty"></string>
    <string name="Fire">Fire</string>
    <string name="menuText">back to menu</string>
    <string name="avancer">forward</string>
    <string name="reculer">backward</string>
    <string name="droite">right</string>
    <string name="gauche">left</string>
    <string name="tir">Button</string>
    <string name="shoot">shoot</string>
    <string name="spinner">Spinner</string>
    <string name="Emotes">Emotes</string>
    <string name="emoteSheh">SHEH !!!</string>
    <string name="emoteSmile">(^O^)</string>
    <string name="emoteBored">-_-</string>
    <string name="emoteWhat">(^_-)</string>
    <string name="colorPicker">Pick a color</string>
    <string name="NameInput">Enter your pseudo</string>
    <string name="HideON">Hide ON</string>
    <string name="HideOFF">Hide OFF</string>
    <string name="hide">hide</string>
    <string name="TravOn">Auto Aim ON</string>
    <string name="TravOFF">Auto Aim OFF</string>
    <string name="Choose">Choose address on history, , ,</string>
    <string name="ChooseControllerJoystickON">Joystick cheats</string>
    <string name="ChooseControllerButtonOFF">Button classic</string>
    <string name="Home">Home</string>
    <string name="JoystickController">JoystickController</string>
    <string name="Buttoncontroller">ButtonController</string>
    <string name="settings">settings</string>
    <string name="help">help</string>
    <string name="credits">© Quentin FARRET and Mathias DURAT</string>
    <string name="help_text">Small help for the little dumbass</string>
    <string name="aide">No help available ecause you are just to strong and smart ! ;)</string>
</resources>